# django-oscar-stubs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run_stubtest.py  stubtest-allowlist.txt  stubtest_mypy.ini  tox.ini
mypy_oscar_plugin/: __init__.py
oscar-stubs/: __init__.pyi  config.pyi  defaults.pyi
oscar-stubs/apps/address/: abstract_models.pyi  admin.pyi  apps.pyi  forms.pyi  models.pyi
oscar-stubs/apps/analytics/: abstract_models.pyi  apps.pyi  models.pyi
oscar-stubs/apps/basket/: abstract_models.pyi  admin.pyi  apps.pyi  forms.pyi  managers.pyi  middleware.pyi  models.pyi  signals.pyi  utils.pyi
oscar-stubs/apps/catalogue/: abstract_models.pyi  admin.pyi  apps.pyi  expressions.pyi  managers.pyi  models.pyi  product_attributes.pyi  views.pyi
oscar-stubs/apps/checkout/: applicator.pyi  apps.pyi  calculators.pyi  exceptions.pyi  mixins.pyi  session.pyi  signals.pyi  utils.pyi  views.pyi
oscar-stubs/apps/communication/: abstract_models.pyi  apps.pyi  managers.pyi  (+2 more)
oscar-stubs/core/: application.pyi  compat.pyi  customisation.pyi  decorators.pyi  exceptions.pyi  loading.pyi  prices.pyi  thumbnails.pyi  utils.pyi  validators.pyi
oscar-stubs/forms/: fields.pyi  mixins.pyi  widgets.pyi
oscar-stubs/templatetags/: currency_filters.pyi  purchase_info_tags.pyi
oscar-stubs/views/: __init__.pyi  decorators.pyi  generic.pyi
tests/: mypy_test_settings.py  mypy_test_settings_forked_order.py  test_fork_detection.py  test_stubs.yml
tests/forked_order/: apps.py  models.py  utils.py
tests/thirdparty_checkout/: mixins.py
(+123 files in other folders)
